<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/nimEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nim_hint"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:inputType="number"
        android:autofillHints="number"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>
</LinearLayout>
