<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil_pengguna"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/userInfoContainer"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/welcomeText"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/userName"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nim"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/userNim"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/userInfoContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profil"
            android:drawableLeft="@drawable/ic_editprofile"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:drawableLeft="@drawable/ic_logout"
            android:padding="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/light_blue"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/buttonPosting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_plus"
            android:layout_gravity="center"
            android:contentDescription="@string/button_posting_description"/>

        <ImageButton
            android:id="@+id/buttonHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_home"
            android:layout_gravity="center"
            android:contentDescription="@string/button_home_description"/>

        <ImageButton
            android:id="@+id/buttonProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_user"
            android:layout_gravity="center"
            android:contentDescription="@string/button_profile_description"/>
    </LinearLayout>

</RelativeLayout>
