<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/storyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/welcomeText"
        android:layout_above="@+id/navbar"
        android:padding="5dp"/>

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/light_blue"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/buttonPosting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_plus"
            android:layout_gravity="center"
            android:contentDescription="@string/button_posting_description" />

        <ImageButton
            android:id="@+id/buttonHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_home"
            android:layout_gravity="center"
            android:contentDescription="@string/button_home_description"/>

        <ImageButton
            android:id="@+id/buttonProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_user"
            android:layout_gravity="center"
            android:contentDescription="@string/button_profile_description"/>
    </LinearLayout>

</RelativeLayout>